--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": "saccas/map-geo-admin",
+    "name": "saccas/mapgeoadmin",
     "description": "map geo admin extension https://map.geo.admin.ch",
     "type": "typo3-cms-extension",
     "homepage": "https://map.geo.admin.ch",
     "license": ["GPL-2.0+"],
     "autoload": {
         "psr-4": {
-            "Saccas\\MapGeoAdmin\\": "Classes/"
+            "Saccas\\MapGeoAdmin\\": "Classes"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Saccas\\MapGeoAdmin\\Tests\\": "Tests/"
+            "Saccas\\MapGeoAdmin\\Tests\\": "Tests"
         }
     },
     "require": {
@@ -36,12 +36,12 @@
         ]
     },
     "replace": {
-        "map_geo_admin": "self.version",
+        "mapgeoadmin": "self.version",
         "typo3-ter/mapgeoadmin": "self.version"
     },
     "extra": {
         "typo3/cms": {
-            "extension-key": "map_geo_admin",
+            "extension-key": "mapgeoadmin",
             "cms-package-dir": "{$vendor-dir}/typo3/cms",
             "web-dir": "web"
         }
