--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "php": ">=7.0.0 <=7.2.99",
-        "typo3/cms-core": "^8.7.0"
+		"typo3/cms-core": "^8.7.13 || ^9.5.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.2.0",
