--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -21,7 +21,7 @@ jobs:
         uses: shivammathur/setup-php@v1
         with:
           php-version: ${{ matrix.php-versions }}
-          extension-csv: mbstring
+          extension: mbstring
           coverage: xdebug
 
       - name: Validate composer.json and composer.lock
@@ -29,6 +29,12 @@ jobs:
 
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress --no-suggest
+      
+      - name: OSKAR-PHP-CS-Fixer
+        uses: OskarStark/php-cs-fixer-ga@2.15.3
+        with:
+          args: --diff --dry-run
+        
 
 #      - name: Run test suite
 #        run: composer run-script test
