--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     },
     "require": {
-        "php": ">=7.0.0 <=7.2.99",
+        "php": "^7.2",
 	"typo3/cms-core": "^8.7.13 || ^9.5.0"
     },
     "require-dev": {
