--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,10 @@
     },
     "require": {
         "php": "^7.2",
-	"typo3/cms-core": "^8.7.13 || ^9.5.0"
+        "typo3/cms-core": "^8.7.13 || ^9.5.0 || ^10.4.10"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.2.0",
-        "typo3/cms": "^8.7.0",
         "typo3/testing-framework": "^1.2.2"
     },
     "scripts": {
