--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
         }
     },
     "require": {
-        "php": "^7.2",
-        "typo3/cms-core": "^8.7.13 || ^9.5.0 || ^10.4.10"
+        "php": "^7.2 || ^8.0 || ^8.1",
+        "typo3/cms-core": "^8.7.13 || ^9.5.0 || ^10.4.10 || ^11.5"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.2.0",
-        "typo3/testing-framework": "^1.2.2"
+        "typo3/testing-framework": "^1.2.2 || ^6.16"
     },
     "scripts": {
         "lint": [
