--- a/composer.json
+++ b/composer.json
@@ -15,23 +15,13 @@
         }
     },
     "require": {
-        "php": "^7.2 || ^8.0 || ^8.1",
-        "typo3/cms-core": "^8.7.13 || ^9.5.0 || ^10.4.10 || ^11.5"
-    },
-    "require-dev": {
-        "squizlabs/php_codesniffer": "^3.2.0",
-        "typo3/testing-framework": "^1.2.2 || ^6.16"
+        "php": "~8.1.0",
+        "typo3/cms-core": "^11.5"
     },
     "scripts": {
         "lint": [
             "! find Classes -type f -name \"*.php\" -exec php -d error_reporting=32767 -l {} \\; 2>&1 >&- | grep \"^\"",
             "! find Tests -type f -name \"*.php\" -exec php -d error_reporting=32767 -l {} \\; 2>&1 >&- | grep \"^\""
-        ],
-        "cgl": [
-            "./vendor/bin/phpcs"
-        ],
-        "test": [
-            "TYPO3_PATH_ROOT=web ./vendor/bin/phpunit"
         ]
     },
     "replace": {
