[TASK] Add supports PHP 8.1 through 8.3

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     },
     "require": {
-        "php": "~8.1.0",
+        "php": ">= 8.1 < 8.4",
         "typo3/cms-core": "^11.5.16"
     },
     "scripts": {
