--- a/composer.json
+++ b/composer.json
@@ -9,29 +9,45 @@
             "Saccas\\Mapgeoadmin\\": "Classes"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "Saccas\\Mapgeoadmin\\Tests\\": "Tests"
-        }
-    },
     "require": {
         "php": ">= 8.1 < 8.4",
-        "typo3/cms-core": "^11.5.16"
+		"typo3/cms-backend": "^11.5.16",
+		"typo3/cms-core": "^11.5.16",
+		"typo3/cms-extbase": "^11.5.16",
+		"typo3/cms-fluid": "^11.5.16",
+		"typo3/cms-frontend": "^11.5.16"
+    },
+	"require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.65",
+        "typo3/cms-install": "^11.5.16",
+        "typo3/coding-standards": "^0.7.1"
     },
     "scripts": {
         "lint": [
             "! find Classes -type f -name \"*.php\" -exec php -d error_reporting=32767 -l {} \\; 2>&1 >&- | grep \"^\"",
             "! find Tests -type f -name \"*.php\" -exec php -d error_reporting=32767 -l {} \\; 2>&1 >&- | grep \"^\""
-        ]
-    },
+        ],
+		"cs": "./.Build/bin/php-cs-fixer fix --dry-run -v --config ./Build/php-cs-fixer.php"
+	},
     "replace": {
         "typo3-ter/mapgeoadmin": "self.version"
     },
+	"config": {
+		"bin-dir": ".Build/bin",
+		"lock":false,
+		"sort-packages": true,
+		"vendor-dir": ".Build/vendor",
+        "allow-plugins": {
+            "typo3/class-alias-loader": true,
+            "typo3/cms-composer-installers": true
+        }
+	},
     "extra": {
         "typo3/cms": {
+			"app-dir": ".Build",
             "extension-key": "mapgeoadmin",
             "cms-package-dir": "{$vendor-dir}/typo3/cms",
-            "web-dir": "web"
+            "web-dir": ".Build/web"
         }
     }
 }
