--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     },
 	"require-dev": {
         "friendsofphp/php-cs-fixer": "^3.65",
+        "ssch/typo3-rector": "^2.12",
         "typo3/cms-install": "^11.5.16",
         "typo3/coding-standards": "^0.7.1"
     },
@@ -27,7 +28,8 @@
             "! find Classes -type f -name \"*.php\" -exec php -d error_reporting=32767 -l {} \\; 2>&1 >&- | grep \"^\"",
             "! find Tests -type f -name \"*.php\" -exec php -d error_reporting=32767 -l {} \\; 2>&1 >&- | grep \"^\""
         ],
-		"cs": "./.Build/bin/php-cs-fixer fix --dry-run -v --config ./Build/php-cs-fixer.php"
+		"cs": "./.Build/bin/php-cs-fixer fix --dry-run -v --config ./Build/php-cs-fixer.php",
+		"rector": "./.Build/bin/rector process -v --dry-run --config=./Build/rector.php --output-format=console"
 	},
     "replace": {
         "typo3-ter/mapgeoadmin": "self.version"
