--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,16 @@
     },
     "require": {
         "php": ">= 8.1 < 8.4",
-		"typo3/cms-backend": "^11.5.16",
-		"typo3/cms-core": "^11.5.16",
-		"typo3/cms-extbase": "^11.5.16",
-		"typo3/cms-fluid": "^11.5.16",
-		"typo3/cms-frontend": "^11.5.16"
+		"typo3/cms-backend": "^11.5.16 || ^13.4",
+		"typo3/cms-core": "^11.5.16 || ^13.4",
+		"typo3/cms-extbase": "^11.5.16 || ^13.4",
+		"typo3/cms-fluid": "^11.5.16 || ^13.4",
+		"typo3/cms-frontend": "^11.5.16 || ^13.4"
     },
 	"require-dev": {
         "friendsofphp/php-cs-fixer": "^3.65",
         "ssch/typo3-rector": "^2.12",
-        "typo3/cms-install": "^11.5.16",
+        "typo3/cms-install": "^11.5.16 || ^13.4",
         "typo3/coding-standards": "^0.7.1"
     },
     "scripts": {
