--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         }
     },
     "require": {
-        "php": ">= 8.1 < 8.4",
-		"typo3/cms-backend": "^11.5.16 || ^13.4",
-		"typo3/cms-core": "^11.5.16 || ^13.4",
-		"typo3/cms-extbase": "^11.5.16 || ^13.4",
-		"typo3/cms-fluid": "^11.5.16 || ^13.4",
-		"typo3/cms-frontend": "^11.5.16 || ^13.4"
+        "php": ">= 8.3 < 8.4",
+		"typo3/cms-backend": "^13.4",
+		"typo3/cms-core": "^13.4",
+		"typo3/cms-extbase": "^13.4",
+		"typo3/cms-fluid": "^13.4",
+		"typo3/cms-frontend": "^13.4"
     },
 	"require-dev": {
 		"a9f/typo3-fractor": "^0.5.0",
@@ -24,7 +24,7 @@
 		"saschaegerer/phpstan-typo3": "^2.1",
 		"ssch/typo3-rector": "^3.1",
 		"typo3/coding-standards": "^0.8.0",
-        "typo3/cms-install": "^11.5.16 || ^13.4"
+        "typo3/cms-install": "^13.4"
     },
     "scripts": {
         "lint": [
