--- a/.github/workflows/core13.yml
+++ b/.github/workflows/core13.yml
@@ -3,7 +3,7 @@ name: core 13
 on: [ push, pull_request ]
 
 env:
-  COMPOSER_FLAGS: --no-ansi --no-interaction --no-scripts --no-progress --no-dev --working-dir=app/backend
+  COMPOSER_FLAGS: --no-ansi --no-interaction --no-scripts --no-progress --no-dev
   COMPOSER_INSTALL_FLAGS: -q --prefer-dist
 
 jobs:
