--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,9 @@
             "! find Classes -type f -name \"*.php\" -exec php -d error_reporting=32767 -l {} \\; 2>&1 >&- | grep \"^\"",
             "! find Tests -type f -name \"*.php\" -exec php -d error_reporting=32767 -l {} \\; 2>&1 >&- | grep \"^\""
         ],
-		"cs": "./.Build/vendor/bin/php-cs-fixer fix -v --config=./Build/.php-cs-fixer.php --diff --dry-run ",
-		"rector": "./.Build/vendor/bin/rector process -v --config=./Build/rector.php --output-format=console --dry-run"
+		"cs": "./.Build/vendor/bin/php-cs-fixer fix -v --config=./Build/.php-cs-fixer.php --diff --dry-run",
+		"rector": "./.Build/vendor/bin/rector process -v --config=./Build/rector.php --output-format=console --dry-run",
+		"fractor": "./.Build/vendor/bin/fractor process -v --config=./Build/fractor.php --output-format=console --dry-run"
 	},
     "replace": {
         "typo3-ter/mapgeoadmin": "self.version"
